--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
               <li>
                 <div class="item">
                   <span>INTEIRA</span>
-                  <span class="valor">64,99</span>
+                  <span class="valor">64,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>MEIA</span>
-                  <span class="valor">44,99</span>
+                  <span class="valor">44,00</span>
                 </div>
               </li>
             </ul>
@@ -366,14 +366,14 @@
               <li>
                 <div class="item">
                   <span>Simples</span>
-                  <span class="valor">15,99</span>
+                  <span class="valor">15,00</span>
                 </div>
                 <p>1 Espeto, arroz, maionese, molho vinagrete e farofa</p>
               </li>
               <li>
                 <div class="item">
                   <span>Completo</span>
-                  <span class="valor">25,99</span>
+                  <span class="valor">25,00</span>
                 </div>
                 <p>
                   1 Espeto, arroz, maionese, molho vinagrete, farofa, batata
@@ -392,28 +392,28 @@
               <li>
                 <div class="item">
                   <span>Bife c/ Fritas</span>
-                  <span class="valor">24,99</span>
+                  <span class="valor">24,00</span>
                 </div>
                 <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
               </li>
               <li>
                 <div class="item">
                   <span>Filé de Peixe</span>
-                  <span class="valor">21,99</span>
+                  <span class="valor">21,00</span>
                 </div>
                 <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
               </li>
               <li>
                 <div class="item">
                   <span>Filé de Frango</span>
-                  <span class="valor">19,99</span>
+                  <span class="valor">19,00</span>
                 </div>
                 <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
               </li>
               <li>
                 <div class="item">
                   <span>Linguiça Mineira</span>
-                  <span class="valor">19,99</span>
+                  <span class="valor">19,00</span>
                 </div>
                 <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
               </li>
@@ -467,7 +467,7 @@
               <li>
                 <div class="item">
                   <span>Classic Vigário</span>
-                  <span class="valor">29,99</span>
+                  <span class="valor">29,00</span>
                 </div>
                 <p>
                   Blend da casa 160g, queijo muçarela, bacon, maionese da casa,
@@ -477,7 +477,7 @@
               <li>
                 <div class="item">
                   <span>Derrame de Cheddar</span>
-                  <span class="valor">29,99</span>
+                  <span class="valor">29,00</span>
                 </div>
                 <p>
                   Blend da casa 160g, queijo Cheddar, bacon e cebola
@@ -487,7 +487,7 @@
               <li>
                 <div class="item">
                   <span>Lanche Kids</span>
-                  <span class="valor">15,99</span>
+                  <span class="valor">15,00</span>
                 </div>
                 <p>6 nuggets. Acompanha fritas</p>
               </li>
@@ -503,40 +503,40 @@
               <li>
                 <div class="item">
                   <span>Batata Frita</span>
-                  <span class="valor">24,99</span>
+                  <span class="valor">24,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Batata Frita Supreme</span>
-                  <span class="valor">37,99</span>
+                  <span class="valor">37,00</span>
                 </div>
                 <p>Acompanha: Cheddar, bacon e queijo muçarela gratinado</p>
               </li>
               <li>
                 <div class="item">
                   <span>Batata Vigarista</span>
-                  <span class="valor">44,99</span>
+                  <span class="valor">44,00</span>
                 </div>
                 <p>Acompanha: catupiry original e camarão</p>
               </li>
               <li>
                 <div class="item">
                   <span>Aipim do vigário</span>
-                  <span class="valor">54,99</span>
+                  <span class="valor">54,00</span>
                 </div>
                 <p>Aipim frito, carne seca acebolada e queijo coalho.</p>
               </li>
               <li>
                 <div class="item">
                   <span>Bolinho de Bacalhau (10un.)</span>
-                  <span class="valor">29,99</span>
+                  <span class="valor">29,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Bolinho de Feijoada (6un.)</span>
-                  <span class="valor">23,99</span>
+                  <span class="valor">23,00</span>
                 </div>
                 <p>
                   Massa especial da casa, carne seca desfiada, bacon, calabresa
@@ -546,13 +546,13 @@
               <li>
                 <div class="item">
                   <span>Camarão ao Alho e Óleo</span>
-                  <span class="valor">39,99</span>
+                  <span class="valor">39,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Porção de coração</span>
-                  <span class="valor">54,99</span>
+                  <span class="valor">54,00</span>
                 </div>
                 <p>
                   1 kg de coração de frango no azeite, temperados com coentro,
@@ -562,7 +562,7 @@
               <li>
                 <div class="item">
                   <span>Carpaccio Vigário</span>
-                  <span class="valor">29,99</span>
+                  <span class="valor">29,00</span>
                 </div>
                 <p>
                   Carpaccio de carne, alcaparras, lascas de queijo parmesão,
@@ -572,7 +572,7 @@
               <li>
                 <div class="item">
                   <span>Churrasco Mix</span>
-                  <span class="valor">64,99</span>
+                  <span class="valor">64,00</span>
                 </div>
                 <p>
                   Tiras de contra filé, pedaçõs de frango, linguiça mineira e
@@ -582,19 +582,19 @@
               <li>
                 <div class="item">
                   <span>Filé ao Gorgonzola</span>
-                  <span class="valor">59,99</span>
+                  <span class="valor">59,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Frango a Passarinho</span>
-                  <span class="valor">34,99</span>
+                  <span class="valor">34,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Franguitos (6un.)</span>
-                  <span class="valor">18,99</span>
+                  <span class="valor">18,00</span>
                 </div>
                 <p>
                   Coxinhas de frango empanados, acompanha 1 molho de sua
@@ -604,41 +604,41 @@
               <li>
                 <div class="item">
                   <span>Franguitos (12un.)</span>
-                  <span class="valor">34,99</span>
+                  <span class="valor">34,00</span>
                 </div>
                 <p>Acompanha 2 molhos</p>
               </li>
               <li>
                 <div class="item">
                   <span>Gurjão de Frango</span>
-                  <span class="valor">34,99</span>
+                  <span class="valor">34,00</span>
                 </div>
                 <p>adicione batata frita por apenas R$15,00</p>
               </li>
               <li>
                 <div class="item">
                   <span>Gurjão de Peixe</span>
-                  <span class="valor">44,99</span>
+                  <span class="valor">44,00</span>
                 </div>
                 <p>adicione batata frita por apenas R$15,00</p>
               </li>
               <li>
                 <div class="item">
                   <span>Pastéis Diversos (6uni.)</span>
-                  <span class="valor">19,99</span>
+                  <span class="valor">19,00</span>
                 </div>
                 <p>Carne e Queijo</p>
               </li>
               <li>
                 <div class="item">
                   <span>Pastéis de Camarão (6un.)</span>
-                  <span class="valor">24,99</span>
+                  <span class="valor">24,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Tábua de frios</span>
-                  <span class="valor">35,99</span>
+                  <span class="valor">35,00</span>
                 </div>
                 <p>
                   Salame, Queijo provolone, queijo muçarela, porção de azeitonas
@@ -702,13 +702,13 @@
               <li>
                 <div class="item">
                   <span>Doce de Leite</span>
-                  <span class="valor">8,99</span>
+                  <span class="valor">8,00</span>
                 </div>
               </li>
               <li>
                 <div class="item">
                   <span>Nutella</span>
-                  <span class="valor">13,99</span>
+                  <span class="valor">13,00</span>
                 </div>
               </li>
             </ul>
@@ -790,7 +790,7 @@
               <li>
                 <div class="item">
                   <span>Suco Natural</span>
-                  <span class="valor">8,00</span>
+                  <span class="valor">10,00</span>
                 </div>
               </li>
               <li>
@@ -819,13 +819,7 @@
               </li>
               <li>
                 <div class="item">
-                  <span>Coca cola 2 litros</span>
-                  <span class="valor">15,00</span>
-                </div>
-              </li>
-              <li>
-                <div class="item">
-                  <span>Guaraná antártica 2 litros</span>
+                  <span>Refrigerante 2 litros</span>
                   <span class="valor">15,00</span>
                 </div>
               </li>
@@ -936,7 +930,7 @@
             <ul class="items">
               <li>
                 <div class="item">
-                  <span>cACHAÇA mINEIRA</span>
+                  <span>Cachaça Mineira</span>
                   <span class="valor">5,00</span>
                 </div>
               </li>
@@ -972,7 +966,7 @@
               </li>
               <li>
                 <div class="item">
-                  <span>Gin Gordon's</span>
+                  <span>Gin ROCK'S</span>
                   <span class="valor">10,00</span>
                 </div>
               </li>
