--- a/index.html
+++ b/index.html
@@ -220,7 +220,6 @@
 
       <section class="cardapio" aria-label="Cardápio">
         <!-- Comidas ------------------------------ -->
-
         <div id="nossacostela"></div>
         <div class="item_container">
           <h2>NOSSA COSTELA</h2>
@@ -229,7 +228,10 @@
             <ul class="items">
               <li>
                 <div class="item">
-                  <span>INTEIRA</span>
+                  <div>
+                    <span>INTEIRA</span>
+                    <a data-bs-toggle="modal" data-bs-target="#reg-modal">📷</a>
+                  </div>
                   <span class="valor">64,00</span>
                 </div>
               </li>
@@ -1197,6 +1199,15 @@
         <p class="footer__copy">Desenvolvido por Gilberto Espinosa.</p>
       </div>
     </footer>
+
+    <!-- ------------------------------------------------- Modal------------------------------------------------------------------- -->
+    <div class="modal fade" tabindex="-1" id="reg-modal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-transparent">
+          <img src="/img/fotos/custela.png" alt="" />
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
