--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
         <div class="collapse navbar-collapse px-2" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto pt-3">
             <li class="nav-item">
-              <a class="nav-link active fs-5" aria-current="page" href="#">Início</a>
+              <a class="nav-link active fs-5" aria-current="page" href="#"
+                >Início</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link fs-5" href="#cardapio">Cardápio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-5" href="#">Eventos</a>
+              <a class="nav-link fs-5" href="#evento">Eventos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-5" href="#">Novidades</a>
+              <a class="nav-link fs-5" href="#novidades">Novidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-5" href="#">Promoção</a>
+              <a class="nav-link fs-5" href="#promo">Promoção</a>
             </li>
           </ul>
         </div>
@@ -180,129 +182,136 @@
     <div id="cardapio"></div>
     <h2 class="text-center my-3 fst-italic">Busque por categoria:</h2>
     <p class="text-center my-3 fs-1 fw-bolder">Comidas</p>
-    
+
     <!-- SESSAO CARDS Botoes Comidas -->
-    <div>
-      <div class="container row mx-auto g-4">
-        <div class="col-6">
-          <a href="#nossacostela">
-            <button type="button" class="btn btn-dark">Costela</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#nossochurrasco">
-            <button type="button" class="btn btn-dark">Churrasco</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#pratoexecutivo">
-            <button type="button" class="btn btn-dark">Prato Executivo</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#pratochurrasco">
-            <button type="button" class="btn btn-dark">Prato Churrascos</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#petiscos">
-            <button type="button" class="btn btn-dark">Petiscos</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#lanches">
-            <button type="button" class="btn btn-dark">Lanches</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#caldododia">
-            <button type="button" class="btn btn-dark">Caldo do Dia</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#guarnicoes">
-            <button type="button" class="btn btn-dark">Guarnições</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#molhos">
-            <button type="button" class="btn btn-dark">Molhos</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#sobremesas">
-            <button type="button" class="btn btn-dark">Sobremesas</button>
-          </a>
-        </div>
+    <div class="container row mx-auto g-4">
+      <div class="col-6">
+        <a href="#nossacostela">
+          <button type="button" class="btn btn-dark">Costela</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#nossochurrasco">
+          <button type="button" class="btn btn-dark">Churrasco</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#pratoexecutivo">
+          <button type="button" class="btn btn-dark">Prato Executivo</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#pratochurrasco">
+          <button type="button" class="btn btn-dark">Prato Churrascos</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#petiscos">
+          <button type="button" class="btn btn-dark">Petiscos</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#lanches">
+          <button type="button" class="btn btn-dark">Lanches</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#caldododia">
+          <button type="button" class="btn btn-dark">Caldo do Dia</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#guarnicoes">
+          <button type="button" class="btn btn-dark">Guarnições</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#molhos">
+          <button type="button" class="btn btn-dark">Molhos</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#sobremesas">
+          <button type="button" class="btn btn-dark">Sobremesas</button>
+        </a>
       </div>
     </div>
 
     <!-- SESSAO CARDS Botoes Bebidas -->
-    <div>
-      <h2 class="text-center mt-5 mb-3 fs-1 fw-bolder">Bebidas</h2>
-
-      <div class="container row mx-auto g-4">
-        <div class="col-6">
-          <a href="#semalcool">
-            <button type="button" class="btn btn-dark">Sem Álcool</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#cervejas">
-            <button type="button" class="btn btn-dark">Cervejas</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#doses">
-            <button type="button" class="btn btn-dark">Doses</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#drinks">
-            <button type="button" class="btn btn-dark">Drinks</button>
-          </a>
-        </div>
-        <div class="col-6">
-          <a href="#combos">
-            <button type="button" class="btn btn-dark">Combos</button>
-          </a>
-        </div>
+    <h2 class="text-center mt-5 mb-3 fs-1 fw-bolder">Bebidas</h2>
+    <div class="container row mx-auto g-4">
+      <div class="col-6">
+        <a href="#semalcool">
+          <button type="button" class="btn btn-dark">Sem Álcool</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#cervejas">
+          <button type="button" class="btn btn-dark">Cervejas</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#doses">
+          <button type="button" class="btn btn-dark">Doses</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#drinks">
+          <button type="button" class="btn btn-dark">Drinks</button>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="#combos">
+          <button type="button" class="btn btn-dark">Combos</button>
+        </a>
       </div>
     </div>
 
-    <!-- SESSAO CARDS Evento INICIO -->
-    <h2 class="container text-center my-3 mt-5">Essa semana está bombando!</h2>
+    <div class="titulo-destaque" id="evento">
+      <img src="./assets/logo-seu-vigario-base.png" alt="logo seu vigario" />
+      <h2><span>Destaque</span> da Semana<span>.</span></h2>
+    </div>
+
+    <!-- SESSAO CARDS DESTAQUE INICIO -->
     <div class="container row mx-auto mb-5">
-      <div class="col-12 col-md-6 col-xl-4 pb-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="card rounded-0">
-          <img
-            class="d-md-none d-block"
-            src="./assets/Mobile/eventos/evento-terca-lg.jpg"
-            alt="homem branco de gorro preto e camiseta amarela"
-          />
-          <img
-            class="d-none d-md-block d-xl-none"
-            src="./assets/Tablet/produtos/camiseta.png"
-            alt="homem branco de gorro preto e camiseta amarela"
-          />
-          <img
-            class="d-none d-xl-block"
-            src="./assets/Desktop/produtos/camiseta.png"
-            alt="homem branco de gorro preto e camiseta amarela"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Dia 23/04</h5>
-            <p class="card-text">
-              Feriado de São Jorge, venha nos prestigiar com a sua presença!
-              Teremos feijoada a partir das 16h.
-            </p>
+          <div class="destaque">
+            <img
+              class=""
+              src="./assets/Mobile/eventos/evento-terca-lg.jpg"
+              alt="homem preto de blaze azul, camisa branca e sorrindo"
+            />
+            <div class="card-body">
+              <h5 class="card-title fs-4">Dia 23/04</h5>
+              <p class="card-text">
+                Feriado de São Jorge, venha nos prestigiar com a sua presença!
+                Teremos feijoada a partir das 16h.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="d-flex justify-content-center">
+    <div id="promo"></div>
+    <div class="titulo-destaque" >
       <img src="./assets/logo-seu-vigario-base.png" alt="logo seu vigario" />
+      <h2><span>Promoções</span>!</h2>
+    </div>
+
+    <div class="promocoes">
+      <div>
+        <img src="./assets/Mobile/produtos/chopp-delivery.jpg" alt="">
+      </div>
+      <div>
+        <img src="./assets/Mobile/produtos/happy-hour.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="titulo-destaque">
+      <img src="./assets/logo-seu-vigario-base.png" alt="logo seu vigario" />
+      <h2><span>Cardápio</span>.</h2>
     </div>
 
     <!-- SESSAO CARDAPIO -->
@@ -534,7 +543,7 @@
 
       <div id="lanches"></div>
       <div class="item_container">
-        <h2>Lanches 🍔🍟</h2>
+        <h2>LANCHES 🍔🍟</h2>
         <div class="item-card">
           <ul class="items">
             <li>
@@ -1259,23 +1268,24 @@
       </div>
     </div>
 
+    <div id="novidades"></div>
+
     <!-- SESSAO CARD saber mais INICIO -->
     <form
-      class="container border border-secondary my-4 my-xl-5 p-3 text-center div-novidades mx-auto"
+      class="container border border-secondary my-5 my-xl-5 p-3 text-center mx-auto"
     >
       <h5>
         Quer saber mais sobre nossas promoções exclusivas e ficar por dentro das
         novidades?
       </h5>
       <p>Siga nossa página no instagram</p>
-      <div class="">
-        <!-- icone do insta -->
+      <div class="instagram">
+        <a href="https://www.instagram.com/seuvigario/">
+          <img src="./assets/icon/instagram.png" alt="instagram">
+        </a>
       </div>
     </form>
 
-    <div class="d-flex justify-content-center mb-5">
-      <img src="./assets/logo-seu-vigario-base.png" alt="logo seu vigario" />
-    </div>
     <!-- SESSAO FOOTER INICIO -->
     <footer class="text-center bg-black text-bg-dark px-4">
       <p class="py-3 m-0">
