atualização de preços

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       </div>
       <div class="col-6">
         <a href="#pratochurrasco">
-          <button type="button" class="btn btn-dark">Prato Churrascos</button>
+          <button type="button" class="btn btn-dark">Prato Churrasco</button>
         </a>
       </div>
       <div class="col-6">
@@ -327,15 +327,14 @@
               <div class="item">
                 <div>
                   <span>INTEIRA</span>
-                  <a data-bs-toggle="modal" data-bs-target="#reg-modal">📷</a>
                 </div>
-                <span class="valor">64,00</span>
+                <span class="valor">65,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>MEIA</span>
-                <span class="valor">44,00</span>
+                <span class="valor">45,00</span>
               </div>
             </li>
           </ul>
@@ -465,14 +464,14 @@
             <li>
               <div class="item">
                 <span>Simples</span>
-                <span class="valor">15,00</span>
+                <span class="valor">16,00</span>
               </div>
               <p>1 Espeto, arroz, maionese, molho vinagrete e farofa</p>
             </li>
             <li>
               <div class="item">
                 <span>Completo</span>
-                <span class="valor">25,00</span>
+                <span class="valor">26,00</span>
               </div>
               <p>
                 1 Espeto, arroz, maionese, molho vinagrete, farofa, batata
@@ -491,28 +490,28 @@
             <li>
               <div class="item">
                 <span>Bife c/ Fritas</span>
-                <span class="valor">24,00</span>
+                <span class="valor">25,00</span>
               </div>
               <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
             </li>
             <li>
               <div class="item">
                 <span>Filé de Peixe</span>
-                <span class="valor">21,00</span>
+                <span class="valor">22,00</span>
               </div>
               <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
             </li>
             <li>
               <div class="item">
                 <span>Filé de Frango</span>
-                <span class="valor">19,00</span>
+                <span class="valor">20,00</span>
               </div>
               <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
             </li>
             <li>
               <div class="item">
                 <span>Linguiça Mineira</span>
-                <span class="valor">19,00</span>
+                <span class="valor">20,00</span>
               </div>
               <p>Arroz, Feijão, Farofa, batata frita ou salada</p>
             </li>
@@ -565,7 +564,7 @@
             <li>
               <div class="item">
                 <span>Classic Vigário</span>
-                <span class="valor">29,00</span>
+                <span class="valor">30,00</span>
               </div>
               <p>
                 Blend da casa 160g, queijo muçarela, bacon, maionese da casa,
@@ -575,7 +574,7 @@
             <li>
               <div class="item">
                 <span>Derrame de Cheddar</span>
-                <span class="valor">29,00</span>
+                <span class="valor">30,00</span>
               </div>
               <p>
                 Blend da casa 160g, queijo Cheddar, bacon e cebola caramelizada.
@@ -585,7 +584,7 @@
             <li>
               <div class="item">
                 <span>Lanche Kids</span>
-                <span class="valor">15,00</span>
+                <span class="valor">16,00</span>
               </div>
               <p>6 nuggets. Acompanha fritas</p>
             </li>
@@ -601,40 +600,40 @@
             <li>
               <div class="item">
                 <span>Batata Frita</span>
-                <span class="valor">24,00</span>
+                <span class="valor">25,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Batata Frita Supreme</span>
-                <span class="valor">37,00</span>
+                <span class="valor">38,00</span>
               </div>
               <p>Acompanha: Cheddar, bacon e queijo muçarela gratinado</p>
             </li>
             <li>
               <div class="item">
                 <span>Batata Vigarista</span>
-                <span class="valor">44,00</span>
+                <span class="valor">45,00</span>
               </div>
               <p>Acompanha: catupiry original e camarão</p>
             </li>
             <li>
               <div class="item">
                 <span>Aipim do vigário</span>
-                <span class="valor">54,00</span>
+                <span class="valor">55,00</span>
               </div>
               <p>Aipim frito, carne seca acebolada e queijo coalho.</p>
             </li>
             <li>
               <div class="item">
                 <span>Bolinho de Bacalhau (10un.)</span>
-                <span class="valor">29,00</span>
+                <span class="valor">30,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Bolinho de Feijoada (6un.)</span>
-                <span class="valor">23,00</span>
+                <span class="valor">24,00</span>
               </div>
               <p>
                 Massa especial da casa, carne seca desfiada, bacon, calabresa e
@@ -644,13 +643,13 @@
             <li>
               <div class="item">
                 <span>Camarão ao Alho e Óleo</span>
-                <span class="valor">39,00</span>
+                <span class="valor">40,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Porção de coração</span>
-                <span class="valor">54,00</span>
+                <span class="valor">55,00</span>
               </div>
               <p>
                 1 kg de coração de frango no azeite, temperados com coentro,
@@ -660,7 +659,7 @@
             <li>
               <div class="item">
                 <span>Carpaccio Vigário</span>
-                <span class="valor">29,00</span>
+                <span class="valor">30,00</span>
               </div>
               <p>
                 Carpaccio de carne, alcaparras, lascas de queijo parmesão, fios
@@ -670,7 +669,7 @@
             <li>
               <div class="item">
                 <span>Churrasco Mix</span>
-                <span class="valor">64,00</span>
+                <span class="valor">65,00</span>
               </div>
               <p>
                 Tiras de contra filé, pedaçõs de frango, linguiça mineira e
@@ -680,19 +679,19 @@
             <li>
               <div class="item">
                 <span>Filé ao Gorgonzola</span>
-                <span class="valor">59,00</span>
+                <span class="valor">60,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Frango a Passarinho</span>
-                <span class="valor">34,00</span>
+                <span class="valor">35,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Franguitos (6un.)</span>
-                <span class="valor">18,00</span>
+                <span class="valor">19,00</span>
               </div>
               <p>
                 Coxinhas de frango empanados, acompanha 1 molho de sua
@@ -702,41 +701,41 @@
             <li>
               <div class="item">
                 <span>Franguitos (12un.)</span>
-                <span class="valor">34,00</span>
+                <span class="valor">35,00</span>
               </div>
               <p>Acompanha 2 molhos</p>
             </li>
             <li>
               <div class="item">
                 <span>Gurjão de Frango</span>
-                <span class="valor">34,00</span>
+                <span class="valor">35,00</span>
               </div>
               <p>adicione batata frita por apenas R$15,00</p>
             </li>
             <li>
               <div class="item">
                 <span>Gurjão de Peixe</span>
-                <span class="valor">44,00</span>
+                <span class="valor">45,00</span>
               </div>
               <p>adicione batata frita por apenas R$15,00</p>
             </li>
             <li>
               <div class="item">
                 <span>Pastéis Diversos (6uni.)</span>
-                <span class="valor">19,00</span>
+                <span class="valor">20,00</span>
               </div>
               <p>Carne e Queijo</p>
             </li>
             <li>
               <div class="item">
                 <span>Pastéis de Camarão (6un.)</span>
-                <span class="valor">24,00</span>
+                <span class="valor">25,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Tábua de frios</span>
-                <span class="valor">35,00</span>
+                <span class="valor">36,00</span>
               </div>
               <p>
                 Salame, Queijo provolone, queijo muçarela, porção de azeitonas e
@@ -800,14 +799,21 @@
             <li>
               <div class="item">
                 <span>Doce de Leite</span>
-                <span class="valor">8,00</span>
+                <span class="valor">9,00</span>
               </div>
             </li>
             <li>
               <div class="item">
                 <span>Nutella</span>
-                <span class="valor">13,00</span>
+                <span class="valor">14,00</span>
               </div>
+            </li>
+            <li>
+              <div class="item">
+                <span>Taça de churros</span>
+                <span class="valor"></span>
+              </div>
+              <p>4 minis churros afogados em uma imensidão de sabor de sua preferência</p>
             </li>
           </ul>
         </div>
